--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.27",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
     "autoprefixer": "^10.3.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.9",
     "tailwindcss": "^2.2.16",
-    "typescript": "4.4.3"
+    "typescript": "^4.4.3"
   }
 }
