--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.19",
+    "@types/redux-thunk": "^2.1.0",
     "next": "11.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
